# AD_Dev4_Team2

./: README.md  edge_version_4.cpp
lane_detection/: CMakeLists.txt
lane_detection/include/simul/: Simulator.h  func_LD.cpp  func_SimulCV.cpp  func_Simulator.cpp
lane_detection/src/: edge_version_0.cpp  edge_version_1.cpp  edge_version_2.cpp  edge_version_3.cpp  main copy.cpp  main.cpp
lane_detection_1221_3/: CMakeLists.txt  package.xml
lane_detection_1221_3/include/: Simulator.h
lane_detection_1221_3/launch/: drive.launch
lane_detection_1221_3/src/: main.cpp  tickmeter.cpp
lane_detection_1222_5/: CMakeLists.txt  package.xml
lane_detection_1222_5/include/: Simulator.h
lane_detection_1222_5/launch/: drive.launch  drive_hough.launch
lane_detection_1222_5/src/: main.cpp
lane_detection_dev/: CMakeLists.txt  package.xml
lane_detection_dev/include/: Simulator.h
lane_detection_dev/src/: main.cpp
lane_detection_pub/: .gitignore  CMakeLists.txt  package.xml
lane_detection_pub/config/: run_lane_detection.yaml
lane_detection_pub/launch/: run_lane_detection.launch
lane_detection_pub/src/: CMakeLists.txt  run.cpp
lane_detection_pub/src/core/: CMakeLists.txt  system.cpp  system.h  tracking_module.cpp  tracking_module.h
lane_detection_pub/src/data/: CMakeLists.txt  frame.cpp  frame.h
lane_detection_pub/src/ros/: CMakeLists.txt  lane_detection_ros.cpp  lane_detection_ros.h
lane_detection_pub/src/viewer/: CMakeLists.txt  draw.cpp  draw.h
